[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/PManager.gd" type="Script" id=1]

[node name="PManager" type="Node2D"]
script = ExtResource( 1 )

[node name="slot1Timer" type="Timer" parent="."]

[node name="slot2Timer" type="Timer" parent="."]

[node name="slot3Timer" type="Timer" parent="."]

[connection signal="timeout" from="slot1Timer" to="." method="_on_slot1Timer_timeout"]
[connection signal="timeout" from="slot2Timer" to="." method="_on_slot2Timer_timeout"]
[connection signal="timeout" from="slot3Timer" to="." method="_on_slot3Timer_timeout"]
